--- a/site/test1.html
+++ b/site/test1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	
+	<link href="style_css.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <h1 style="text-align: center;">  </h1>
