--- a/site/test1.html
+++ b/site/test1.html
@@ -1,72 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link href="style_css.css" rel="stylesheet" type="text/css">
+	<link href="C:/Users/deepi/Coursera-test/style_css.css" rel="stylesheet" type="text/css">
 	<style>
-	.Section1,.Section2,.Section3{
-    position:relative;
-  height : 200px;
-  box-sizing : border-box;
-  padding : 10px;
- 
- background-color : #00ffee;
- float:left;
- border :5px solid black;
-}
-.Subtitle1{
-position:absolute;
-width:100px;
-right:0px;
-top:-20px;
-background-color:red;
-border:5px solid black;
-}
-.Subtitle2{
-width:100px;
-position:absolute;
-right:0px;
-top:-20px;
-background-color:blue;
-border:5px solid black;
-}
-.Subtitle3{
-width:100px;
-position:absolute;
-right:0px;
-top:-20px;
-background-color:yellow;
-border:5px solid black;
-}
-@media(min-width : 992px)
-{
-  .Section1,.Section2{
-    width: 30%;
-    margin: 2%;
-  }
-  .Section3{
-    width: 30%;
-   margin-top : 2%;
-    margin-right:1%;
-    margin-left: 1%;
-    margin-bottom : 2%;
-  }
-}
-@media(max-width : 991px) and (min-width : 768px)
-{
-.Section1,.Section2{
-  width :46%;
-  margin:2%;
-}
-.Section3{
-width:96%;
-margin : 2%;
-}
-}
-@media(max-width: 767px){
-  .Section1,.Section2,.Section3{
-  width: 96%;
-  margin : 2%;}
-}
+
 	</style>
 </head>
 <body>
