--- a/site/test1.html
+++ b/site/test1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link href="site/style_css.css" rel="stylesheet" type="text/css">
+	<link href="site/style_css.css" rel="stylesheet" >
 	<style>
 
 	</style>
